--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-
 {
-  "name": "Staking-tests",
+  "name": "next-level-staking",
   "version": "1.0.0",
   "description": "Run unit tests on this project.",
   "type": "module",
@@ -13,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hirosystems/clarinet-sdk": "^2.3.2",
-    "@stacks/transactions": "^6.12.0",
+    "@stacks/blockchain-api-client": "^7.13.0",
+    "@types/chai": "^4.3.16",
+    "chai": "^5.1.1",
     "chokidar-cli": "^3.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "vitest": "^1.3.1",
     "vitest-environment-clarinet": "^2.0.0"
+  },
+  "devDependencies": {
+    "@hirosystems/clarinet-sdk": "^2.7.0",
+    "@stacks/transactions": "^6.16.1",
+    "@types/node": "^20.14.11"
   }
 }
